Working on Project page. Fixed weird alignment.

--- a/src/style.css
+++ b/src/style.css
@@ -167,7 +167,7 @@
 }
 
 #project__cards {
-  left: -19vw;
+  /* left: -19vw; */
   width: 140vw;
   opacity: 0;
   display: flex;
